Footer, book choose

--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../css/style.css" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>WeLikeToRead</title>
   </head>
   <body>
@@ -242,7 +244,88 @@
 
       </section>
     </main>
-    <footer></footer>
+    <footer>
+    <section class="section-4 d-flex justify-content-center justify-content-lg-between p-3 align-items-center text-white border-bottom">
+    <div class="d-lg-block">
+      <h3>Where to find us:</h3>
+    </div>
+    <div>
+      <a href=""><img class="img-fluid m-2" src="../assets/fb.png" alt=""/></a>
+      <a href=""><img class="img-fluid m-2" src="../assets/instagram.png" alt=""/></a>
+      <a href=""><img class="img-fluid m-2" src="../assets/twitter.png" alt=""/></a>
+    </div>
+  </section>
+  <section class="section-5">
+    <div class="container text-white">
+      <div class="row mt-3">
+        <div class="col-sm-12 col-md-3 mx-auto mb-4 text-center">
+          <h6 class="text-uppercase fw-bold mb-4">
+            About us
+          </h6>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus consectetur est lacus. Donec gravida mauris orci, sed venenatis nulla gravida vitae. Nam egestas lacus velit, non tempus quam placerat eget.
+          </p>
+        </div>
+
+        <div class="col-sm-12 col-md-3 mx-auto mb-4 text-center">
+          <h6 class="text-uppercase fw-bold mb-4">
+            Books
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Criminals</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Fantasy</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Drama</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Sci-Fi</a>
+          </p>
+        </div>
+
+        <div class="col-sm-12 col-md-3 mx-auto mb-4 text-center">
+          <h6 class="text-uppercase fw-bold mb-4">
+            How to
+          </h6>
+          <p>
+            <a href="#!" class="text-reset">Read</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Write</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Buy</a>
+          </p>
+          <p>
+            <a href="#!" class="text-reset">Sell</a>
+          </p>
+        </div>
+
+        <div class="col-sm-12 col-md-3 mx-auto mb-4 text-center">
+          <h6 class="text-uppercase fw-bold mb-4">
+            Contact
+          </h6>
+          <p><span class="material-icons ">
+            home
+            </span>The North Pole, Cave no.3</p>
+          <p><span class="material-icons">
+            email
+            </span>
+            weliketoread@info.com
+          </p>
+          <p><span class="material-icons">
+            phone
+            </span>111 222 333</p>
+          <p><span class="material-icons">
+            phone
+            </span>444 555 666</p>
+        </div>
+      </div>
+    </div>
+  </section>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
